--- a/styles/1368landscape.css
+++ b/styles/1368landscape.css
@@ -105,8 +105,8 @@
     }
 
     section.about {
-        padding-right: 0;
-        padding-left: 0;
+        padding-right: 3%;
+        padding-left: 3%;
     }
 
 }
