--- a/styles/1024horizon.css
+++ b/styles/1024horizon.css
@@ -1,6 +1,6 @@
 @media screen and (min-width: 810px) and (orientation: landscape) {
     html {
-        font-size: 12px;
+        font-size: 10px;
     }
 
     .welcome {
@@ -16,15 +16,23 @@
         margin: 0 2%;
     }
 
-    .button-con {
-        bottom: 7vh;
-    }
-
     .projects h1 {
         margin-bottom: calc(5vh + 20px);
     }
 
     footer p {
         line-height: 60px;
+    }
+
+    nav.desktop {
+        display: block;
+        height: 0;
+        background-color: black;
+        transition: .3s ease-in-out;
+        z-index: 1;
+    }
+
+    .desktop.active {
+        height: 60px;
     }
 }
