--- a/styles/ipadpro.css
+++ b/styles/ipadpro.css
@@ -31,6 +31,33 @@
         margin: 3vh auto;
     }
 
+    .dropdown-content h3 {
+        line-height: 110px;
+    }
+
+    .dropdown-bar {
+        height: 90px;
+    }
+
+    .dropdown-btn img {
+        width: 17px;
+        height: 23px;
+        margin-left: 8px;
+    }
+
+    .dropdown-btn h3 {
+        line-height: 90px;
+    }
+
+    .dropdown-content {
+        top: 90px;
+    }
+
+    .dropdown-content.active {
+        height: 444px;
+    }
+
+
 }
 
 @media screen and (min-width: 1000px) {
