--- a/styles/mobilenav.css
+++ b/styles/mobilenav.css
@@ -1,8 +1,6 @@
 @media only screen and (orientation: portrait) {
     nav.mobile {
         display: block;
-        height: 100vh;
-        overflow: hidden;
     }
 
     .hidden {
@@ -29,11 +27,14 @@
 
 
     .mobile .opacity-bg {
+        display: none;
+        height: 100vh;
         opacity: 0;
         transition: .3s;
     }
 
     .opacity-bg.opacity-on {
+        display: block;
         opacity: 1;
     }
 
