--- a/styles/ipadpro.css
+++ b/styles/ipadpro.css
@@ -117,9 +117,8 @@
     }
 
     .projects .project-con {
-        float: left;
-        width: 45%;
-        margin: 0 2.5%;
+        flex-basis: 45%;
+        margin: 2.5%;
     }
 
 
