--- a/styles/style.css
+++ b/styles/style.css
@@ -354,7 +354,16 @@ section.projects {
     background-color: #06547A;
     height: auto;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
 }
+
+.projects .wrapper {
+    width: 100%;
+}
+
+
+
 
 .projects h1 {
     text-transform: uppercase;
@@ -363,12 +372,22 @@ section.projects {
     line-height: 100px;
     margin-bottom: 5vh;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    width: 100%;
+
+}
+
+.projects div.clearfix {
+    display: flex;
+    align-content: space-around;
+    flex-wrap: wrap;
 
 }
 
 .project-con {
+    flex-basis: 100%;
+    flex-grow: 1;
     height: 50vh;
-    width: 100%;
+    /* width: 100%; */
     background-color: white;
     margin-bottom: 10vh;
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
@@ -442,6 +461,10 @@ section.projects {
 .lech-system {
     background-image: url('../img/blue-2620133.webp');
 
+}
+
+.artstore {
+    background-image: url('../img/artstore.jpeg');
 }
 
 section.contact {
